# bananabatch

./: .env.example  .gitignore  README.md  pyproject.toml
bananabatch/: __init__.py
bananabatch/cli/: __init__.py  main.py
bananabatch/core/: __init__.py  engine.py  models.py
bananabatch/gui/: __init__.py  app.py
bananabatch/providers/: __init__.py  base.py  gemini.py
examples/: characters.csv  defects.csv  edits.csv  sample_prompts.csv  sample_prompts.json  style_transfers.csv  template_prompts.csv
