[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bananabatch"
version = "0.1.0"
description = "Batch image processing tool using Nano Banana"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Masic" }
]
keywords = ["gemini", "image-generation", "batch-processing", "ai", "google-genai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "google-genai>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
bananabatch = "bananabatch.cli.main:app"

[project.urls]
Homepage = "https://github.com/GH05TCREW/bananabatch"
Repository = "https://github.com/GH05TCREW/bananabatch"

[tool.hatch.build.targets.wheel]
packages = ["bananabatch"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
